FAMILIA, CHANGES

#### 0.6.9 (2011-01-09) ###############################

* ADDED: RedisObject#cache


#### 0.6.8 (2011-01-08) ###############################

* CHANGE: RedisObject#members calls compact to remove nils
* ADDED: RedisObject#to_redis/from_redis print message for nils to STDERR
* ADDED: RedisObjects#membersraw for List, Set, and SortedSet


#### 0.6.7 (2011-01-02) ###############################

* FIXED: RedisObject#ttl, grab from instance first. 

#### 0.6.6 (2011-01-02) ###############################

* FIXED: Classes that include Familia now use the suffix defined for that class.
* FIXED: Familia::String#value= calls update_expiration 
* CHANGE: RedisObject classes grab the ttl from @opts[:class]
* ADDED: Familia.classes can return RedisObject.classes


#### 0.6.4 (2010-12-31) ###############################

* CHANGE: initialize does not call from_array (fix for Storable 0.8.6)

#### 0.6.3 (2010-12-30) ###############################

* FIXED: HashKey#update
* FIXED: count in List#members, SortedSed#members
* ADDED: List#add


#### 0.6.2 (2010-12-29) ###############################

* FIXED: Familia::ClassMethods.ttl=
* FIXED: Familia.class_lists (etc) methods. 
* FIXED: Redis objects check if parent is a Module
* CHANGE: redis_objects, class_redis_objects maintain order they're defined in. (See Bluth::Queue)
* CHANGE: Depends on Storable 0.8.4
* CHANGE: FamiliaObject.instances is now a sorted set
* ADDED: InstanceMethods#initialize calls init if available
* ADDED: Can set index values via InstanceMethods#index=
* ADDED: empty? method for List, Set, et al
* ADDED: :extend option for RedisObject instances
* ADDED: :reference option for storing the index value instead of the marshaled value


#### 0.6.1 (2010-12-18) ###############################

* CHANGE: Default initialize method calls initialize_redis_objects before super
* CHANGE: Familia::String: lazy-set default value
* ADDED: Familia.index can accept an Array of field names